--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.0.jar-1=U:\\AC31007 Agile\\gson-2.8.0.jar
 file.reference.gson-2.8.0.jar=U:\\gson-2.8.0.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\erincoey\\Downloads\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 includes=**
